# FIRES

./: LICENSE  README.md  main_piecereg.py
conf/: README.md  env.yaml
docs/: index.html
scripts/: Utils.py  eval_alignReg2GT.py  eval_transformRegPlys.py  path.py  postprocess_getMVSScale.py  postprocess_result.py  preprocess_denseReconstruction.py  reg_alignTwoSides.py  utils_evaluation.py
src/: CMakeLists.txt  build.sh
src/PieceReg/: CMakeLists.txt  PCReg.cpp  PCReg.h  main_ICPReg.cpp
src/include/: arguments.h
src/libs/: CMakeLists.txt
src/libs/Registration/: CMakeLists.txt  CloudReprojection.cpp  CloudReprojection.h  ICPReg.cpp  ICPReg.h  PointsReg.cpp  PointsReg.h  ScaleICP.cpp  ScaleICP.h
src/libs/cloud/: AlphaShape.cpp  AlphaShape.h  CMakeLists.txt  CloudUtils.cpp  CloudUtils.h  IOUtils.cpp  IOUtils.h  LogUtils.cpp  LogUtils.h  PiecesMatching.cpp  PiecesMatching.h  PointsUtils.cpp  PointsUtils.h
src/tools/: CMakeLists.txt  ColorFilter.cpp  Eval_MergeTrans.cpp  FGR_FPFH.cpp  FGR_PCAAlignScale.cpp  FGR_TransformSource.cpp  TransformCloud.cpp  UniformSampling.cpp  postprocess_calibrateMVSScale.cpp  preprocess_Extract3DBoundaryAndRefine.cpp  preprocess_ExtractPieces.cpp  preprocess_ExtractPieces_NoSample.cpp  preprocess_GTMatching.cpp  preprocess_PiecesMatching.cpp
